--- a/drivers/Xiaomi_Aqara_Mijia_Sensors.manifest.json
+++ b/drivers/Xiaomi_Aqara_Mijia_Sensors.manifest.json
@@ -1,15 +1,15 @@
 {
-  "packageName": "Xiaomi Aqara Mijia Sensors",
+  "packageName": "Xiaomi Aqara Mijia Sensors and Switches",
   "author": "Jonathan Michaelson",
-  "version": "0.06",
+  "version": "0.07",
   "minimumHEVersion": "0.0",
   "documentationLink": "https://github.com/waytotheweb/hubitat",
   "communityLink": "https://community.hubitat.com/t/beta-release-xiaomi-aquara-combined-driver/61630",
-  "dateReleased": "2021-01-13",
+  "dateReleased": "2021-01-29",
   "drivers": [
     {
       "id": "78e2689b-12bc-449d-90f5-bb0aa5ec2b95",
-      "name": "Xiaomi Aqara Mijia Sensors",
+      "name": "Xiaomi Aqara Mijia Sensors and Switches",
       "namespace": "waytotheweb",
       "location": "https://raw.githubusercontent.com/waytotheweb/hubitat/main/drivers/Xiaomi_Aqara_Mijia_Sensors.groovy",
       "required": true
